--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,3 +1,33 @@
+
+@thesis{adeff_measurement_1991,
+	location = {Monterey},
+	title = {Measurement of the Space Thermoacoustic Refrigerator performance},
+	institution = {Naval Postgraduate School},
+	type = {phdthesis},
+	author = {Adeff, Jay Andrew},
+	date = {1991},
+	langid = {english},
+	file = {Adeff - Measurement of the Space Thermoacoustic Refrigerat.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\QWDJBXRH\\Adeff - Measurement of the Space Thermoacoustic Refrigerat.pdf:application/pdf},
+}
+
+@article{garrett_thermoacoustic_1993,
+	title = {Thermoacoustic refrigerator for space applications},
+	volume = {7},
+	issn = {0887-8722, 1533-6808},
+	url = {https://arc.aiaa.org/doi/10.2514/3.466},
+	doi = {10.2514/3.466},
+	pages = {595--599},
+	number = {4},
+	journaltitle = {Journal of Thermophysics and Heat Transfer},
+	shortjournal = {Journal of Thermophysics and Heat Transfer},
+	author = {Garrett, Steven L. and Adeff, Jay A. and Hofler, Thomas J.},
+	urldate = {2024-06-10},
+	date = {1993-10},
+	langid = {english},
+	file = {Garrett et al. - 1993 - Thermoacoustic refrigerator for space applications.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\PYZJPT6J\\Garrett et al. - 1993 - Thermoacoustic refrigerator for space applications.pdf:application/pdf},
+}
+
+
 @book{ozisik_heat_1993,
 	location = {New York},
 	edition = {2nd ed},
