--- a/fig/fig_TACOTSchematics/tex/fig_TACOTSchematics.tex
+++ b/fig/fig_TACOTSchematics/tex/fig_TACOTSchematics.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=.5]
 	\node[anchor=south west, inner sep=0] (image) at (0,0) {\includegraphics[angle=0,origin=c,width=.6\textwidth]{../fig/fig_TACOTSchematics/TACOT.png}};
 	
 	\begin{scope}[x={(image.south east)},y={(image.north west)}]
