--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -240,12 +240,12 @@ Le flux de chaleur thermoacoustique est donné par Swift \cite{swift_thermoacous
 
 \section{\'Etat de l'art}
 \subsection{De la recherche fondamentale...}
-L'effet thermoacoustique est un phénomène observé depuis les environs du I\ier{} siècle avant notre ère \echaf{src souffleurs de verre + préparation du riz (cours Guillaume ?) ?}
+L'effet thermoacoustique est un phénomène observé depuis les environs du I\ier{} siècle avant notre ère \echaf{src souffleurs de verre + préparation du riz (cours Guillaume ?) ?} \cite{adeff_measurement_1991}
 
 Depuis les années 1970-1980 durant lesquelles les premières machines modernes ont été mises au point, beaucoup de chemin a été parcouru. Le premier moteur à ondes progressives a été construit par Ceperley en 1979 \cite{ceperley_pistonless_1979}, et la première pompe à chaleur par Hofler lors de son doctorat en 1983 \echaf{src}
 
 \subsection{... à des applications industrielles}
-Les machines thermoacoustiques sont intéressantes pour l'industrie \echaf{continuer avec cryocooler pour liquéfaction de gaz + TNO/BlueHeart ?}
+Les machines thermoacoustiques sont intéressantes pour l'industrie \echaf{continuer avec cryocooler pour liquéfaction de gaz + TNO/BlueHeart ?}\cite{swift_thermoacoustics_2002, wollan_development_2002, adeff_measurement_1991, garrett_thermoacoustic_1993}
 
 \section{Outils électroacoustiques pour la thermoacoustique}
 %\subsection{Transduction électrodynamique}
