--- a/fig/fig_dKdV/tex/fig_dKdV.tex
+++ b/fig/fig_dKdV/tex/fig_dKdV.tex
@@ -17,7 +17,9 @@
     xlabel={Fréquence $f$ [\unit{\Hz}]},
     ylabel={\'Epaisseurs de couches limites $\delta_{\kappa,\nu}$ [\unit{\m}]},
     xmin=0,xmax=75,ymin=0,ymax=.5/1000,
-    xtick={0,25,47,50,75,100},ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
+    xtick={0,25,47,50,75,100},
+    ytick={0,2.81/100000,9.1120/100000,1.4452/10000,
+    	2.5/10000,5/10000,1/1000},
     domain=0:100,
     legend style = {at={(.95,.95)},anchor = north east,rounded corners}
     ]
@@ -31,6 +33,6 @@
 %         \draw[dashed,black!50] ({axis cs:\xcursor,0}|-{rel axis cs:0,0}) -- ({axis cs:\xcursor,0}|-{rel axis cs:0,\ycursorK});
        \addplot[loosely dashed,draw=black] {2.81/100000};
         
-        \legend{Thermique $\delta_\kappa$ \\ Visqueuse $\delta_\nu$ \\ $r_h=\qty{2.81e-5}{\m}$ \\};
+        \legend{Thermique $\delta_\kappa$ \\ Visqueuse $\delta_\nu$ \\ $r_h$ \\};
     \end{axis}
 \end{tikzpicture}
