--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,6 +1,33 @@
+@inproceedings{poese_thermoacoustic_2004,
+	location = {Glasgow, Royaume Uni},
+	title = {Thermoacoustic refrigeration for ice cream sales},
+	eventtitle = {6th {IIR} Gustav Lorentzen conference},
+	author = {Poese, Matthew E and Smith, Robert W M and Garrett, Steven L and van Gerwen, Rene and Gosselin, Pete},
+	date = {2004},
+	langid = {english},
+	file = {Poese et al. - Thermoacoustic refrigeration for ice cream sales.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\Z6CZ74SR\\Poese et al. - Thermoacoustic refrigeration for ice cream sales.pdf:application/pdf},
+}
+
+@inproceedings{gedeon_dc_1997,
+	location = {Boston, {USA}},
+	title = {{DC} Gas Flows in Stirling and Pulse Tube Cryocoolers},
+	isbn = {978-1-4613-7691-0},
+	url = {http://link.springer.com/10.1007/978-1-4615-5869-9_45},
+	pages = {385--392},
+	booktitle = {Cryocoolers 9},
+	publisher = {Springer {US}},
+	author = {Gedeon, David},
+	editor = {Ross, R. G.},
+	urldate = {2022-10-17},
+	date = {1997},
+	langid = {english},
+	doi = {10.1007/978-1-4615-5869-9_45},
+	keywords = {Refrigerator, Thermoacoustics},
+	file = {Gedeon - 1997 - DC Gas Flows in Stirling and Pulse Tube Cryocooler.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\6E66IGFS\\Gedeon - 1997 - DC Gas Flows in Stirling and Pulse Tube Cryocooler.pdf:application/pdf},
+}
 
 @thesis{adeff_measurement_1991,
-	location = {Monterey},
+	location = {Monterey, {USA}},
 	title = {Measurement of the Space Thermoacoustic Refrigerator performance},
 	institution = {Naval Postgraduate School},
 	type = {phdthesis},
@@ -449,32 +476,32 @@ Knio (1996).},
 	file = {Biwa et al. - 2007 - Measurements of acoustic streaming in a looped-tub.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\67EHIFIT\\Biwa et al. - 2007 - Measurements of acoustic streaming in a looped-tub.pdf:application/pdf},
 }
 
-@incollection{ross_dc_1997,
-	location = {Boston, {MA}},
-	title = {{DC} Gas Flows in Stirling and Pulse Tube Cryocoolers},
-	isbn = {978-1-4613-7691-0 978-1-4615-5869-9},
-	url = {http://link.springer.com/10.1007/978-1-4615-5869-9_45},
-	abstract = {Whenever a closed-loop flow path exists in a stirling or pulse-tube cryocooler, there is a potential for a {DC} gas flow - where the positive and negative flows over each half cycle do not quite cancel completely. A closed loop may be formed by a displacer seal in a stirling cooler, which connects the compression and expansion spaces in parallel with the regenerator, or by a bypass orifice in a double-inlet pulse-tube cooler, which connects the warm end of the compliance tube (pulse tube) back to the compression space.
-{DC} gas flows were discovered in simulation models of double-inlet pulse-tube cryocoolers
-run with the Sage computer program. At the root of the problem are in-phase density
-velocity fluctuations in the flow-resistive elements of the closed loop which tend to
-product {DC} pressure gradients. The issue is whether or not these {DC} pressure gradients
-completely cancel each other. If they do not, then {DC} flow is the consequence and designers
-must contend with new thermal losses associated with components like regenerators and
-compliance tubes. A {DC} flow of less than one percent of the {AC} flow amplitude may be
-enough to cause significant heat lift degradation.},
-	pages = {385--392},
-	booktitle = {Cryocoolers 9},
-	publisher = {Springer {US}},
-	author = {Gedeon, David},
-	editor = {Ross, R. G.},
-	urldate = {2022-10-17},
-	date = {1997},
-	langid = {english},
-	doi = {10.1007/978-1-4615-5869-9_45},
-	keywords = {Thermoacoustics, Refrigerator},
-	file = {Gedeon - 1997 - DC Gas Flows in Stirling and Pulse Tube Cryocooler.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\6E66IGFS\\Gedeon - 1997 - DC Gas Flows in Stirling and Pulse Tube Cryocooler.pdf:application/pdf},
-}
+%@incollection{ross_dc_1997,
+%	location = {Boston, {MA}},
+%	title = {{DC} Gas Flows in Stirling and Pulse Tube Cryocoolers},
+%	isbn = {978-1-4613-7691-0 978-1-4615-5869-9},
+%	url = {http://link.springer.com/10.1007/978-1-4615-5869-9_45},
+%	abstract = {Whenever a closed-loop flow path exists in a stirling or pulse-tube cryocooler, there is a potential for a {DC} gas flow - where the positive and negative flows over each half cycle do not quite cancel completely. A closed loop may be formed by a displacer seal in a stirling cooler, which connects the compression and expansion spaces in parallel with the regenerator, or by a bypass orifice in a double-inlet pulse-tube cooler, which connects the warm end of the compliance tube (pulse tube) back to the compression space.
+%{DC} gas flows were discovered in simulation models of double-inlet pulse-tube cryocoolers
+%run with the Sage computer program. At the root of the problem are in-phase density
+%velocity fluctuations in the flow-resistive elements of the closed loop which tend to
+%product {DC} pressure gradients. The issue is whether or not these {DC} pressure gradients
+%completely cancel each other. If they do not, then {DC} flow is the consequence and designers
+%must contend with new thermal losses associated with components like regenerators and
+%compliance tubes. A {DC} flow of less than one percent of the {AC} flow amplitude may be
+%enough to cause significant heat lift degradation.},
+%	pages = {385--392},
+%	booktitle = {Cryocoolers 9},
+%	publisher = {Springer {US}},
+%	author = {Gedeon, David},
+%	editor = {Ross, R. G.},
+%	urldate = {2022-10-17},
+%	date = {1997},
+%	langid = {english},
+%	doi = {10.1007/978-1-4615-5869-9_45},
+%	keywords = {Thermoacoustics, Refrigerator},
+%	file = {Gedeon - 1997 - DC Gas Flows in Stirling and Pulse Tube Cryocooler.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\6E66IGFS\\Gedeon - 1997 - DC Gas Flows in Stirling and Pulse Tube Cryocooler.pdf:application/pdf},
+%}
 
 @article{gusev_acoustic_2000,
 	title = {Acoustic streaming in annular thermoacoustic prime-movers},
