--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -191,6 +191,8 @@
     	group-separator = \text{\,},
 %    	per-mode = symbol
     	}
+    \DeclareSIUnit[quantity-product = {\,}]
+		\bar{\text{bar}}
 \usepackage{multirow}
 %\usepackage{minitoc}
 \usepackage{etoc}
